--- a/TheWeekendAgriculturist/AndroidManifest.xml
+++ b/TheWeekendAgriculturist/AndroidManifest.xml
@@ -16,11 +16,19 @@
         <activity
             android:name="com.twa.theweekendagriculturist.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
+          
+        </activity>
+        <activity
+            android:name="com.twa.theweekendagriculturist.SplashScreenActivity"
+            >
+             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.twa.theweekendagriculturist.BaseActivity"
+            android:label="@string/title_activity_base" >
         </activity>
     </application>
 
