--- a/TheWeekendAgriculturist/AndroidManifest.xml
+++ b/TheWeekendAgriculturist/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="21" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name="com.twa.theweekendagriculturist.TheWeekendAgriculturist"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -16,19 +19,21 @@
         <activity
             android:name="com.twa.theweekendagriculturist.MainActivity"
             android:label="@string/app_name" >
-          
         </activity>
-        <activity
-            android:name="com.twa.theweekendagriculturist.SplashScreenActivity"
-            >
-             <intent-filter>
+        <activity android:name="com.twa.theweekendagriculturist.SplashScreenActivity" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.twa.theweekendagriculturist.BaseActivity"
             android:label="@string/title_activity_base" >
+        </activity>
+        <activity
+            android:name="com.twa.theweekendagriculturist.EventDetailsActivity"
+            android:label="@string/title_activity_event_details" >
         </activity>
     </application>
 
